--- a/Machine_Learning_Course/ Reducing Loss - 08.09.2019.ipynb
+++ b/Machine_Learning_Course/ Reducing Loss - 08.09.2019.ipynb
@@ -333,7 +333,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "cool! that seemed to work above... the function calculates a line of best fit with MSE less than 2."
+    "cool! that seemed to work above... the function calculates a line of best fit with MSE less than 2.\n",
+    "'the model has converged on a lobf'\n",
+    "\n",
+    "what is different between this and machine learning? are the defined additions of 0.05 to gradient the difference?\n",
+    "is this automated in machine learning?\n",
+    "edit: I suppose we don't know that the result is the actual best fit.. it just has MSE below 2. Need to calculate for higher values, and plot to find local minimum."
    ]
   },
   {
