--- a/Python_challenges/20.09.19_ProjectEuler-CountingSundays-19.ipynb
+++ b/Python_challenges/20.09.19_ProjectEuler-CountingSundays-19.ipynb
@@ -19,13 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "April = June = September = November = 30\n",
     "January = March = May = July = August = October = December = 31\n",
-    "February = 28"
+    "February = 28\n",
+    "February_leap = 29"
    ]
   },
   {
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -519,10 +520,274 @@
     "#now to iterate first of month over 100 years... paying attention to leap years.\n",
     "#leap year calc\n",
     "#this gives me all the years I am looking at:\n",
+    "Months = [January, February, March, April, May, June, July, August, September, October, November, December]\n",
+    "Months_leap = [January, February_leap, March, April, May, June, July, August, September, October, November, December]\n",
     "all_years = list(range(1901,2001))\n",
     "for year in all_years:\n",
     "    if year % 4 == 0:\n",
+    "        year_length = January + February_leap + March + April + May + June + July + August + September + October + November + December\n",
+    "        First_of_the_months = Months\n",
+    "        \n",
     "        print(year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Century = (Months*3+Months_leap)*25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    1    32    60 ... 36434 36465 36495]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Century\n",
+    "#now add 1 Jan 1901 to the list\n",
+    "Century.insert(0,1)\n",
+    "#now cumsum the days over a century\n",
+    "import numpy as np\n",
+    "Century = np.cumsum(Century)\n",
+    "#remove the last entry which is Jan 1 2001\n",
+    "Century = np.delete(Century,-1)\n",
+    "print(Century)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "First_of_month_on_sunday = []\n",
+    "for i in Century:\n",
+    "    if i%7 == 0:\n",
+    "        First_of_month_on_sunday.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[91,\n",
+       " 182,\n",
+       " 609,\n",
+       " 700,\n",
+       " 882,\n",
+       " 1127,\n",
+       " 1309,\n",
+       " 1582,\n",
+       " 1827,\n",
+       " 2100,\n",
+       " 2282,\n",
+       " 2373,\n",
+       " 2709,\n",
+       " 2954,\n",
+       " 2982,\n",
+       " 3227,\n",
+       " 3500,\n",
+       " 3773,\n",
+       " 4018,\n",
+       " 4109,\n",
+       " 4200,\n",
+       " 4627,\n",
+       " 4718,\n",
+       " 4900,\n",
+       " 5145,\n",
+       " 5173,\n",
+       " 5418,\n",
+       " 5600,\n",
+       " 5845,\n",
+       " 6118,\n",
+       " 6300,\n",
+       " 6391,\n",
+       " 6818,\n",
+       " 6909,\n",
+       " 7000,\n",
+       " 7245,\n",
+       " 7518,\n",
+       " 7791,\n",
+       " 8036,\n",
+       " 8309,\n",
+       " 8645,\n",
+       " 8736,\n",
+       " 8918,\n",
+       " 9163,\n",
+       " 9191,\n",
+       " 9436,\n",
+       " 9709,\n",
+       " 10136,\n",
+       " 10318,\n",
+       " 10409,\n",
+       " 10836,\n",
+       " 10927,\n",
+       " 11109,\n",
+       " 11354,\n",
+       " 11536,\n",
+       " 11809,\n",
+       " 12054,\n",
+       " 12327,\n",
+       " 12509,\n",
+       " 12600,\n",
+       " 12936,\n",
+       " 13181,\n",
+       " 13209,\n",
+       " 13454,\n",
+       " 13727,\n",
+       " 14000,\n",
+       " 14245,\n",
+       " 14336,\n",
+       " 14427,\n",
+       " 14854,\n",
+       " 14945,\n",
+       " 15127,\n",
+       " 15372,\n",
+       " 15400,\n",
+       " 15645,\n",
+       " 15827,\n",
+       " 16072,\n",
+       " 16345,\n",
+       " 16527,\n",
+       " 16618,\n",
+       " 17045,\n",
+       " 17136,\n",
+       " 17227,\n",
+       " 17472,\n",
+       " 17745,\n",
+       " 18018,\n",
+       " 18263,\n",
+       " 18536,\n",
+       " 18872,\n",
+       " 18963,\n",
+       " 19145,\n",
+       " 19390,\n",
+       " 19418,\n",
+       " 19663,\n",
+       " 19936,\n",
+       " 20363,\n",
+       " 20545,\n",
+       " 20636,\n",
+       " 21063,\n",
+       " 21154,\n",
+       " 21336,\n",
+       " 21581,\n",
+       " 21763,\n",
+       " 22036,\n",
+       " 22281,\n",
+       " 22554,\n",
+       " 22736,\n",
+       " 22827,\n",
+       " 23163,\n",
+       " 23408,\n",
+       " 23436,\n",
+       " 23681,\n",
+       " 23954,\n",
+       " 24227,\n",
+       " 24472,\n",
+       " 24563,\n",
+       " 24654,\n",
+       " 25081,\n",
+       " 25172,\n",
+       " 25354,\n",
+       " 25599,\n",
+       " 25627,\n",
+       " 25872,\n",
+       " 26054,\n",
+       " 26299,\n",
+       " 26572,\n",
+       " 26754,\n",
+       " 26845,\n",
+       " 27272,\n",
+       " 27363,\n",
+       " 27454,\n",
+       " 27699,\n",
+       " 27972,\n",
+       " 28245,\n",
+       " 28490,\n",
+       " 28763,\n",
+       " 29099,\n",
+       " 29190,\n",
+       " 29372,\n",
+       " 29617,\n",
+       " 29645,\n",
+       " 29890,\n",
+       " 30163,\n",
+       " 30590,\n",
+       " 30772,\n",
+       " 30863,\n",
+       " 31290,\n",
+       " 31381,\n",
+       " 31563,\n",
+       " 31808,\n",
+       " 31990,\n",
+       " 32263,\n",
+       " 32508,\n",
+       " 32781,\n",
+       " 32963,\n",
+       " 33054,\n",
+       " 33390,\n",
+       " 33635,\n",
+       " 33663,\n",
+       " 33908,\n",
+       " 34181,\n",
+       " 34454,\n",
+       " 34699,\n",
+       " 34790,\n",
+       " 34881,\n",
+       " 35308,\n",
+       " 35399,\n",
+       " 35581,\n",
+       " 35826,\n",
+       " 35854,\n",
+       " 36099,\n",
+       " 36281]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "First_of_month_on_sunday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "172"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(First_of_month_on_sunday)\n",
+    "#i think this is the answer\n",
+    "#how to build a check?"
    ]
   },
   {
@@ -530,7 +795,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#building a check"
+   ]
   }
  ],
  "metadata": {
