--- a/Python_challenges/20.09.19_ProjectEuler-CountingSundays-19.ipynb
+++ b/Python_challenges/20.09.19_ProjectEuler-CountingSundays-19.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,20 +520,20 @@
     "#now to iterate first of month over 100 years... paying attention to leap years.\n",
     "#leap year calc\n",
     "#this gives me all the years I am looking at:\n",
-    "Months = [January, February, March, April, May, June, July, August, September, October, November, December]\n",
-    "Months_leap = [January, February_leap, March, April, May, June, July, August, September, October, November, December]\n",
-    "all_years = list(range(1901,2001))\n",
-    "for year in all_years:\n",
-    "    if year % 4 == 0:\n",
-    "        year_length = January + February_leap + March + April + May + June + July + August + September + October + November + December\n",
-    "        First_of_the_months = Months\n",
-    "        \n",
-    "        print(year)"
+    "#Months = [January, February, March, April, May, June, July, August, September, October, November, December]\n",
+    "#Months_leap = [January, February_leap, March, April, May, June, July, August, September, October, November, December]\n",
+    "#all_years = list(range(1901,2001))\n",
+    "#for year in all_years:\n",
+    "#    if year % 4 == 0:\n",
+    "#        year_length = January + February_leap + March + April + May + June + July + August + September + October + November + December\n",
+    "#        First_of_the_months = Months\n",
+    "#        \n",
+    "#        print(year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
     "Century\n",
     "#now add 1 Jan 1901 to the list\n",
     "Century.insert(0,1)\n",
-    "#now cumsum the days over a century\n",
+    "#now cumsum the days over a century to get first of each month\n",
     "import numpy as np\n",
     "Century = np.cumsum(Century)\n",
     "#remove the last entry which is Jan 1 2001\n",
@@ -567,199 +567,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "First_of_month_on_sunday = []\n",
     "for i in Century:\n",
-    "    if i%7 == 0:\n",
+    "    if i%7 == 1:\n",
     "        First_of_month_on_sunday.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[91,\n",
-       " 182,\n",
-       " 609,\n",
-       " 700,\n",
-       " 882,\n",
-       " 1127,\n",
-       " 1309,\n",
-       " 1582,\n",
-       " 1827,\n",
-       " 2100,\n",
-       " 2282,\n",
-       " 2373,\n",
-       " 2709,\n",
-       " 2954,\n",
-       " 2982,\n",
-       " 3227,\n",
-       " 3500,\n",
-       " 3773,\n",
-       " 4018,\n",
-       " 4109,\n",
-       " 4200,\n",
-       " 4627,\n",
-       " 4718,\n",
-       " 4900,\n",
-       " 5145,\n",
-       " 5173,\n",
-       " 5418,\n",
-       " 5600,\n",
-       " 5845,\n",
-       " 6118,\n",
-       " 6300,\n",
-       " 6391,\n",
-       " 6818,\n",
-       " 6909,\n",
-       " 7000,\n",
-       " 7245,\n",
-       " 7518,\n",
-       " 7791,\n",
-       " 8036,\n",
-       " 8309,\n",
-       " 8645,\n",
-       " 8736,\n",
-       " 8918,\n",
-       " 9163,\n",
-       " 9191,\n",
-       " 9436,\n",
-       " 9709,\n",
-       " 10136,\n",
-       " 10318,\n",
-       " 10409,\n",
-       " 10836,\n",
-       " 10927,\n",
-       " 11109,\n",
-       " 11354,\n",
-       " 11536,\n",
-       " 11809,\n",
-       " 12054,\n",
-       " 12327,\n",
-       " 12509,\n",
-       " 12600,\n",
-       " 12936,\n",
-       " 13181,\n",
-       " 13209,\n",
-       " 13454,\n",
-       " 13727,\n",
-       " 14000,\n",
-       " 14245,\n",
-       " 14336,\n",
-       " 14427,\n",
-       " 14854,\n",
-       " 14945,\n",
-       " 15127,\n",
-       " 15372,\n",
-       " 15400,\n",
-       " 15645,\n",
-       " 15827,\n",
-       " 16072,\n",
-       " 16345,\n",
-       " 16527,\n",
-       " 16618,\n",
-       " 17045,\n",
-       " 17136,\n",
-       " 17227,\n",
-       " 17472,\n",
-       " 17745,\n",
-       " 18018,\n",
-       " 18263,\n",
-       " 18536,\n",
-       " 18872,\n",
-       " 18963,\n",
-       " 19145,\n",
-       " 19390,\n",
-       " 19418,\n",
-       " 19663,\n",
-       " 19936,\n",
-       " 20363,\n",
-       " 20545,\n",
-       " 20636,\n",
-       " 21063,\n",
-       " 21154,\n",
-       " 21336,\n",
-       " 21581,\n",
-       " 21763,\n",
-       " 22036,\n",
-       " 22281,\n",
-       " 22554,\n",
-       " 22736,\n",
-       " 22827,\n",
-       " 23163,\n",
-       " 23408,\n",
-       " 23436,\n",
-       " 23681,\n",
-       " 23954,\n",
-       " 24227,\n",
-       " 24472,\n",
-       " 24563,\n",
-       " 24654,\n",
-       " 25081,\n",
-       " 25172,\n",
-       " 25354,\n",
-       " 25599,\n",
-       " 25627,\n",
-       " 25872,\n",
-       " 26054,\n",
-       " 26299,\n",
-       " 26572,\n",
-       " 26754,\n",
-       " 26845,\n",
-       " 27272,\n",
-       " 27363,\n",
-       " 27454,\n",
-       " 27699,\n",
-       " 27972,\n",
-       " 28245,\n",
-       " 28490,\n",
-       " 28763,\n",
-       " 29099,\n",
-       " 29190,\n",
-       " 29372,\n",
-       " 29617,\n",
-       " 29645,\n",
-       " 29890,\n",
-       " 30163,\n",
-       " 30590,\n",
-       " 30772,\n",
-       " 30863,\n",
-       " 31290,\n",
-       " 31381,\n",
-       " 31563,\n",
-       " 31808,\n",
-       " 31990,\n",
-       " 32263,\n",
-       " 32508,\n",
-       " 32781,\n",
-       " 32963,\n",
-       " 33054,\n",
-       " 33390,\n",
-       " 33635,\n",
-       " 33663,\n",
-       " 33908,\n",
-       " 34181,\n",
-       " 34454,\n",
-       " 34699,\n",
-       " 34790,\n",
-       " 34881,\n",
-       " 35308,\n",
-       " 35399,\n",
-       " 35581,\n",
-       " 35826,\n",
-       " 35854,\n",
-       " 36099,\n",
-       " 36281]"
+       "[1,\n",
+       " 274,\n",
+       " 456,\n",
+       " 547,\n",
+       " 974,\n",
+       " 1065,\n",
+       " 1156,\n",
+       " 1401,\n",
+       " 1674,\n",
+       " 1947,\n",
+       " 2192,\n",
+       " 2465,\n",
+       " 2801,\n",
+       " 2892,\n",
+       " 3074,\n",
+       " 3319,\n",
+       " 3347,\n",
+       " 3592,\n",
+       " 3865,\n",
+       " 4292,\n",
+       " 4474,\n",
+       " 4565,\n",
+       " 4992,\n",
+       " 5083,\n",
+       " 5265,\n",
+       " 5510,\n",
+       " 5692,\n",
+       " 5965,\n",
+       " 6210,\n",
+       " 6483,\n",
+       " 6665,\n",
+       " 6756,\n",
+       " 7092,\n",
+       " 7337,\n",
+       " 7365,\n",
+       " 7610,\n",
+       " 7883,\n",
+       " 8156,\n",
+       " 8401,\n",
+       " 8492,\n",
+       " 8583,\n",
+       " 9010,\n",
+       " 9101,\n",
+       " 9283,\n",
+       " 9528,\n",
+       " 9556,\n",
+       " 9801,\n",
+       " 9983,\n",
+       " 10228,\n",
+       " 10501,\n",
+       " 10683,\n",
+       " 10774,\n",
+       " 11201,\n",
+       " 11292,\n",
+       " 11383,\n",
+       " 11628,\n",
+       " 11901,\n",
+       " 12174,\n",
+       " 12419,\n",
+       " 12692,\n",
+       " 13028,\n",
+       " 13119,\n",
+       " 13301,\n",
+       " 13546,\n",
+       " 13574,\n",
+       " 13819,\n",
+       " 14092,\n",
+       " 14519,\n",
+       " 14701,\n",
+       " 14792,\n",
+       " 15219,\n",
+       " 15310,\n",
+       " 15492,\n",
+       " 15737,\n",
+       " 15919,\n",
+       " 16192,\n",
+       " 16437,\n",
+       " 16710,\n",
+       " 16892,\n",
+       " 16983,\n",
+       " 17319,\n",
+       " 17564,\n",
+       " 17592,\n",
+       " 17837,\n",
+       " 18110,\n",
+       " 18383,\n",
+       " 18628,\n",
+       " 18719,\n",
+       " 18810,\n",
+       " 19237,\n",
+       " 19328,\n",
+       " 19510,\n",
+       " 19755,\n",
+       " 19783,\n",
+       " 20028,\n",
+       " 20210,\n",
+       " 20455,\n",
+       " 20728,\n",
+       " 20910,\n",
+       " 21001,\n",
+       " 21428,\n",
+       " 21519,\n",
+       " 21610,\n",
+       " 21855,\n",
+       " 22128,\n",
+       " 22401,\n",
+       " 22646,\n",
+       " 22919,\n",
+       " 23255,\n",
+       " 23346,\n",
+       " 23528,\n",
+       " 23773,\n",
+       " 23801,\n",
+       " 24046,\n",
+       " 24319,\n",
+       " 24746,\n",
+       " 24928,\n",
+       " 25019,\n",
+       " 25446,\n",
+       " 25537,\n",
+       " 25719,\n",
+       " 25964,\n",
+       " 26146,\n",
+       " 26419,\n",
+       " 26664,\n",
+       " 26937,\n",
+       " 27119,\n",
+       " 27210,\n",
+       " 27546,\n",
+       " 27791,\n",
+       " 27819,\n",
+       " 28064,\n",
+       " 28337,\n",
+       " 28610,\n",
+       " 28855,\n",
+       " 28946,\n",
+       " 29037,\n",
+       " 29464,\n",
+       " 29555,\n",
+       " 29737,\n",
+       " 29982,\n",
+       " 30010,\n",
+       " 30255,\n",
+       " 30437,\n",
+       " 30682,\n",
+       " 30955,\n",
+       " 31137,\n",
+       " 31228,\n",
+       " 31655,\n",
+       " 31746,\n",
+       " 31837,\n",
+       " 32082,\n",
+       " 32355,\n",
+       " 32628,\n",
+       " 32873,\n",
+       " 33146,\n",
+       " 33482,\n",
+       " 33573,\n",
+       " 33755,\n",
+       " 34000,\n",
+       " 34028,\n",
+       " 34273,\n",
+       " 34546,\n",
+       " 34973,\n",
+       " 35155,\n",
+       " 35246,\n",
+       " 35673,\n",
+       " 35764,\n",
+       " 35946,\n",
+       " 36191,\n",
+       " 36373]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,16 +769,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "172"
+       "171"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,12 +791,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4809.0"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#building a check\n",
+    "#document all of the sundays... then check which of those fall on first of month?\n",
+    "Jan_01_1901 = \n",
+    "33663/7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    1,    32,    60, ..., 36434, 36465, 36495])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Century"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#building a check"
+    "#this won't work because need unique keys\n",
+    "Century_dict = zip(String_months_Century,Century)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "String_months_Century = String_months * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Century_dict = dict(Century_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jan': 36160,\n",
+       " 'Feb': 36191,\n",
+       " 'Mar': 36220,\n",
+       " 'Apr': 36251,\n",
+       " 'May': 36281,\n",
+       " 'Jun': 36312,\n",
+       " 'Jul': 36342,\n",
+       " 'Aug': 36373,\n",
+       " 'Sep': 36404,\n",
+       " 'Oct': 36434,\n",
+       " 'Nov': 36465,\n",
+       " 'Dec': 36495}"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Century_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
